tests/positive/basic/exit_finally/input.ci
void main() {
    try {
        exit(3);
    } catch (Exception e) {
        print("catch\n");
    } finally {
        print("finally\n");
    }
}
