tests/negative/lexical/unknown_escape_sequence/input.ci
void main() {
    print("bad\q\n");
}
